--- a/index.html
+++ b/index.html
@@ -2,105 +2,115 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <title>Благотворительный фонд Second Book</title>
   </head>
   <body>
     <header>
       <a href="">
-        <img src="" alt="" />
+        <img src="img/logo.svg" alt="Логотип фонда Second Book" />
       </a>
       <nav>
-        <ul>
-          <li>Главная</li>
-          <li>Поддержать</li>
-          <li>Блог</li>
-          <li>Контакты</li>
+        <ul class="main-menu">
+          <li class="main-menu-item">Главная</li>
+          <li class="main-menu-item">Поддержать</li>
+          <li class="main-menu-item">Блог</li>
+          <li class="main-menu-item">Контакты</li>
         </ul>
       </nav>
     </header>
     <main>
       <h1>Благотворительный фонд Second Book</h1>
-      <section>
-        <h2>Передай книгу. Измени мир.</h2>
-        <p>
-          Думаете, куда можно отдать старые книги? <br />
-          Вы можете передать их в благотворительный фонд
-        </p>
-        <div><button>Передать книги</button><button>Подробнее</button></div>
+      <section class="intro">
+        <h2 class="intro-title">Передай книгу. Измени мир.</h2>
+        <p class="intro-slogan">Думаете, куда можно отдать старые книги? Вы можете передать их в благотворительный фонд</p>
+        <div>
+          <button class="button">Передать книги</button>
+          <button class="button">Подробнее</button>
+        </div>
       </section>
-      <section>
-        <h2>Задачи фонда</h2>
-        <ul>
-          <li>
-            <h4>Спасём деревья</h4>
+      <section class="tasks">
+        <h2 class="section-title">Задачи фонда</h2>
+        <ul class="tasks-list">
+          <li class="tasks-list-item">
+            <h3 class="tasks-list-item-title">Спасём деревья</h3>
             <p>Прекратим вырубку леса и посадим новые деревья с www.trees.org. Поддержим программу высадки специальных видов быстрорастущих деревьев.</p>
           </li>
           <li>
-            <h4>Образование</h4>
+            <h3 class="tasks-list-item-title">Образование</h3>
             <p>Поддержим школы вместе с www.donorschoose.org. DonorsChoose помогают учебным заведениям в приобретении необходимых материалов.</p>
           </li>
           <li>
-            <h4>Благотворительность</h4>
+            <h3 class="tasks-list-item-title">Благотворительность</h3>
             <p>Пересылаем книги в Африку с www.betterworldbooks.com. Мы отправляем большую часть книг в Кению и Нигерию при поддержке фонда Better World Books.</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Как это работает?</h2>
-        <p>Вы отдаёте 1 коробку книг = мы сажаем 10 деревьев</p>
-        <p>Вы отдаёте 1 коробку книг = мы финансируем образовательный проект</p>
-        <p>Если в вашем городе нет отделения нашего фонда и вы отправляете книги транспортной компанией, мы компенсируем оплату перевозки по тарифу до 10кг.</p>
-        <button>Передать книги</button>
+      <section class="about">
+        <h2 class="section-title">Как это работает?</h2>
+        <img src="img/about.png" alt="Дети, читающие книги и ростки деревьев" />
+        <p class="about-text">Вы отдаёте 1 коробку книг = мы сажаем 10 деревьев</p>
+        <p class="about-text">Вы отдаёте 1 коробку книг = мы финансируем образовательный проект</p>
+        <p class="about-text">Если в вашем городе нет отделения нашего фонда и вы отправляете книги транспортной компанией, мы компенсируем оплату перевозки по тарифу до 10кг.</p>
+        <button class="button">Передать книги</button>
       </section>
-      <section>
-        <h2>Наша миссия на 2023 год</h2>
-        <p>
-          Наша основная цель: спасти и посадить столько деревьев, сколько сможем и в то же время помочь каждому, кто хочет передать ненужные книги с пользой. <br />
-          Пожертвование книг дарит им вторую жизнь, даёт другим возможность наслаждаться их чтением. Это также позитивно влияет на окружающую среду, поскольку переаботка книг спасает от вырубки леса.
-        </p>
+      <section class="mission">
+        <h2 class="section-title">Наша миссия на 2023 год</h2>
+        <p>Наша основная цель: спасти и посадить столько деревьев, сколько сможем и в то же время помочь каждому, кто хочет передать ненужные книги с пользой. Пожертвование книг дарит им вторую жизнь, даёт другим возможность наслаждаться их чтением. Это также позитивно влияет на окружающую среду, поскольку переаботка книг спасает от вырубки леса.</p>
       </section>
-      <section>
-        <h2>Наши партнёры</h2>
-        <ul>
-          <li>
-            <a href=""><img src="" alt="" /></a>
+      <section class="partners">
+        <h2 class="section-title">Наши партнёры</h2>
+        <ul class="partners-list">
+          <li class="partners-list-item">
+            <a href="">
+              <img src="img/trees-logo.svg" alt="Логотип trees.org" />
+            </a>
           </li>
-          <li>
-            <a href=""><img src="" alt="" /></a>
+          <li class="partners-list-item">
+            <a href="">
+              <img src="img/bwb-logo.svg" alt="Логотип BetterWorldBooks" />
+            </a>
           </li>
-          <li>
-            <a href=""><img src="" alt="" /></a>
+          <li class="partners-list-item">
+            <a href="">
+              <img src="img/bookstore-logo.svg" alt="Логотип Bookstore" />
+            </a>
           </li>
-          <li>
-            <a href=""><img src="" alt="" /></a>
+          <li class="partners-list-item">
+            <a href="">
+              <img src="img/choose-logo.svg" alt="Логотип Donors Choose" />
+            </a>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Как стать участником акции?</h2>
+      <section class="offer">
+        <h2 class="section-title">Как стать участником акции?</h2>
         <p>Пожалуйста заполните форму для того, чтобы оформить отгрузку книг. Мы также принимаем пожертвования от школ и ВУЗов. Если в Вашем городе нет отделения нашего фонда, пожалуйста, воспользуйтесь услугами транспортной компании.</p>
-        <button>Оформить отгрузку</button>
+        <button class="button">Оформить отгрузку</button>
       </section>
     </main>
     <footer>
-      <section>
-        <h2>Контакты</h2>
-        <p><a href="tel:+74956660166">+7 999 999 99 99</a></p>
+      <section class="contacts">
+        <h2 class="section-title">Контакты</h2>
+        <p>
+          <a href="tel:+74956660166">+7 999 999 99 99</a>
+        </p>
       </section>
-      <section>
-        <h2>Соцсети</h2>
-        <ul>
-          <li>
+      <section class="socials">
+        <h2 class="section-title">Соцсети</h2>
+        <ul class="socials-list">
+          <li class="socials-list-item">
             <a href="">
               <svg></svg>
             </a>
           </li>
-          <li>
+          <li class="socials-list-item">
             <a href="">
               <svg></svg>
             </a>
           </li>
-          <li>
+          <li class="socials-list-item">
             <a href="">
               <svg></svg>
             </a>
@@ -109,9 +119,9 @@
       </section>
       <div>
         <a href="">
-          <svg></svg>
+          <img src="img/logo.svg" alt="Логотип фонда Second Book" />
         </a>
-        <p>© 2022 Second Book. Все права защищены.</p>
+        <p class="copyright">© 2022 Second Book. Все права защищены.</p>
       </div>
     </footer>
   </body>
