--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <title>Благотворительный фонд Second Book</title>
   </head>
   <body>
-    <header>
+    <div class="container"></div>
+    <header class="header">
       <a href="">
         <img src="img/logo.svg" alt="Логотип фонда Second Book" />
       </a>
-      <nav>
+      <nav class="main-nav">
         <ul class="main-menu list-style">
           <li class="main-menu-item">Главная</li>
           <li class="main-menu-item">Поддержать</li>
@@ -23,6 +24,7 @@
         </ul>
       </nav>
     </header>
+    <img src="" alt="" />
     <main>
       <h1>Благотворительный фонд Second Book</h1>
       <section class="intro">
