--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Благотворительный фонд Second Book</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
     <header class="header">
       <a href="">
         <img src="img/logo.svg" alt="Логотип фонда Second Book" />
@@ -26,14 +26,15 @@
     </header>
     <img src="" alt="" />
     <main>
-      <h1>Благотворительный фонд Second Book</h1>
       <section class="intro">
+        <div class="intro-wrapper">
         <h2 class="intro-title">Передай книгу. Измени мир.</h2>
         <p class="intro-slogan">Думаете, куда можно отдать старые книги? Вы можете передать их в благотворительный фонд</p>
-        <div>
+        <div class="intro-button-group">
           <a class="button">Передать книги</a>
           <a class="button button-secondary">Подробнее</a>
         </div>
+      </div>
       </section>
       <section class="tasks">
         <h2 class="tasks-title section-title">Задачи фонда</h2>
@@ -129,5 +130,6 @@
         <p class="copyright">© 2022 Second Book. Все права защищены.</p>
       </div>
     </footer>
+  </div>
   </body>
 </html>
