adaptive intro and tasks blocks

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="preload" href="fonts/montserrat-v25-latin_cyrillic-regular.woff2" as="font" type="font/woff2" crossorigin /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,7 +38,7 @@
       </div>
       </section>
       <section class="tasks">
-        <h2 class="tasks-title section-title">Задачи фонда</h2>
+        <h2 class="visually-hidden">Задачи фонда</h2>
         <ul class="tasks-list list-style">
           <li class="tasks-list-item">
             <h3 class="tasks-list-item-title">Спасём деревья</h3>
@@ -45,11 +46,11 @@
           </li>
           <li>
             <h3 class="tasks-list-item-title">Образование</h3>
-            <p>Поддержим школы вместе с <a class="link" href="https://www.donorschoose.org">www.donorschoose.org</a>. DonorsChoose помогают учебным заведениям в приобретении необходимых материалов.</p>
+            <p class="tasks-list-item-info">Поддержим школы вместе с <a class="link" href="https://www.donorschoose.org">www.donorschoose.org</a>. DonorsChoose помогают учебным заведениям в приобретении необходимых материалов.</p>
           </li>
           <li>
             <h3 class="tasks-list-item-title">Благотворительность</h3>
-            <p>Пересылаем книги в Африку с <a class="link" href="https://www.betterworldbooks.com">www.betterworldbooks.com</a>. Мы отправляем большую часть книг в Кению и Нигерию при поддержке фонда Better World Books.</p>
+            <p class="tasks-list-item-info">Пересылаем книги в Африку с <a class="link" href="https://www.betterworldbooks.com">www.betterworldbooks.com</a>. Мы отправляем большую часть книг в Кению и Нигерию при поддержке фонда Better World Books.</p>
           </li>
         </ul>
       </section>
